Fix a problem with the z-index sorting function. (CVS 700)

--- a/src/quirks.css
+++ b/src/quirks.css
@@ -25,3 +25,6 @@ TH > P:last-child, TD > P:last-child {
   margin-bottom: 0px;
 }
 
+FORM {
+  margin-bottom: 1em;
+}
